--- a/test/src/Day5/Form.css
+++ b/test/src/Day5/Form.css
@@ -1,11 +1,11 @@
-body{
+/* body{
     width: 100%;
     height: 100vh;
     background-color: black;
     display: flex;
     align-items: center;
     justify-content: center;
-    /* flex-direction: column; */
+   
 }
 
 .form{
@@ -15,7 +15,6 @@ body{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    /* border: 2px solid white; */
     box-shadow: 4px 4px 10px white;
     border-radius: 30px;
    
@@ -47,4 +46,4 @@ h1:hover{
 
 button{
     margin-top: 20px;
-}
+} */
